--- a/ConsoleApplication8/ConsoleApplication8.vcxproj
+++ b/ConsoleApplication8/ConsoleApplication8.vcxproj
@@ -157,11 +157,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="C_Text.h" />
     <ClInclude Include="MainWindow.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleApplication8.cpp" />
+    <ClCompile Include="C_Text.cpp" />
     <ClCompile Include="MainWindow.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
